--- a/apps/web-store/src/components/nike/UserMenu.astro
+++ b/apps/web-store/src/components/nike/UserMenu.astro
@@ -71,6 +71,12 @@ const user = session?.user;
                     我的订单
                 </a>
                 <a
+                    href='/coupons'
+                    class='block px-4 py-2 text-sm transition-colors text-nike-black hover:bg-nike-grey'
+                >
+                    领券中心
+                </a>
+                <a
                     href='/member/favorites'
                     class='block px-4 py-2 text-sm transition-colors text-nike-black hover:bg-nike-grey'
                 >
